2004-06-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkCanvText.c (DisplayCanvText): Fix text
	rendering problem with canvas text items that
	have a selected region. The previous implementation
	would render the whole line and then redraw the
	selected text if it was a different color. This caused
	problems when the selected text foreground differs
	from the normal text foreground, the anti-aliasing
	alpha pixels for the two text strings would blend
	together resulting in strange looking text. The
	fix is to draw the normal text and the selected text
	separately. This problem has only been observed
	under Windows, with anti-aliased text. [Patch 968725]

2004-05-14  Chengye Mao <chengye.geo@yahoo.com>

	* win/tkWinWm.c <UpdateWrapper> Modified to delete the old wrapper
	correctly [Bug #767176]

2004-05-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgbox.tcl (MessageBox): Shrank the default font size
	for the message to 14-point; nobody liked 18-point!

2004-05-12  Chengye Mao <chengye.geo@yahoo.com>

        * generic/tkBind.c <HandleEventGenerate>: Modified to fix wish
        crach due to incorrectly generate <Destroy> event. This bug was
        reported in comp.lang.tcl but not logged.

2004-05-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Apply fix from tcl bug #950049 for make docs.

2004-05-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinFont.c (Tk_MeasureChars,Tk_DrawChars,etc): Make sure
	that the lastSubFontPtr remains valid even when the subfont array
	is reallocated. [Bug #618872] (dkf, hobbs)

2004-05-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinMenu.c, unix/tkUnixMenu.c (DrawMenuEntryLabel): place
	images of compound menu entries in indicator space if not a radio
	of checkbutton. [Bug #756952] (eserte)

	* win/tkWinX.c:                fix drawing of unicode chars in menu
	* win/tkWinInt.h (TkWinProcs): titles. [Bug #904371] (riefenstahl)
	* win/tkWinMenu.c (ReconfigureWindowsMenu):
